module(
    name = "bold",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "28.2")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.8")
go_sdk.nogo(nogo = "@//:nogo")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//third_party:com_github_ethereum_go_ethereum_secp256k1.patch",
    ],
    path = "github.com/ethereum/go-ethereum",
)

use_repo(
    go_deps,
    "com_github_ethereum_go_ethereum",
    "com_github_gorilla_mux",
    "com_github_jmoiron_sqlx",
    "com_github_mattn_go_sqlite3",
    "com_github_pkg_errors",
    "com_github_stretchr_testify",
    "org_golang_x_sync",
)
