load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validator",
    srcs = [
        "challenges.go",
        "edge_sync.go",
        "edge_tracker.go",
        "edge_tracker_states.go",
        "edge_tracker_transition_table.go",
        "events_filter.go",
        "manager.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/challenge-manager",
    visibility = ["//visibility:public"],
    deps = [
        "//chain-abstraction:protocol",
        "//chain-abstraction/sol-implementation",
        "//challenge-manager/chain-watcher",
        "//containers",
        "//containers/fsm",
        "//layer2-state-provider",
        "//math:bisection",
        "//runtime:retry",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//state-commitments/history:commitments",
        "//time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "validator_test",
    srcs = [
        "edge_sync_test.go",
        "edge_tracker_test.go",
        "validator_example_test.go",
        "validator_test.go",
    ],
    embed = [":validator"],
    deps = [
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "//util/commitments",
        "//util/option",
        "//util/time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_offchainlabs_nitro//util/headerreader",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "challenge-manager_test",
    srcs = [
        "edge_sync_test.go",
        "edge_tracker_test.go",
        "manager_example_test.go",
        "manager_test.go",
    ],
    embed = [":challenge-manager"],
    deps = [
        ":validator",
        "//chain-abstraction:protocol",
        "//chain-abstraction/sol-implementation",
        "//containers/option",
        "//layer2-state-provider",
        "//solgen/go/rollupgen",
        "//state-commitments/history:commitments",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "//testing/toys",
        "//time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_offchainlabs_nitro//util/headerreader",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_stretchr_testify//require",
    ],
)
