load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mmap",
    srcs = ["mmap.go"],
    importpath = "github.com/OffchainLabs/bold/mmap",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common",
        "@org_golang_x_sys//unix",
    ],
)
