load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "backend.go",
        "correspondingl1blocknumber.go",
    ],
    importpath = "github.com/offchainlabs/bold/util",
    visibility = ["//visibility:public"],
    deps = [
        "//chain-abstraction:protocol",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_ethereum_go_ethereum//rpc",
    ],
)
