load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "methods.go",
    ],
    importpath = "github.com/OffchainLabs/bold/api/client",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//api/server",
        "//chain-abstraction:protocol",
        "@com_github_ethereum_go_ethereum//common",
    ],
)
