load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/cmd/ctl",
    visibility = ["//visibility:private"],
    deps = ["//cmd/ctl/internal/ui"],
)

go_binary(
    name = "ctl",
    embed = [":ctl_lib"],
    visibility = ["//visibility:public"],
)
