load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "history",
    srcs = [
        "history_commitment.go",
        "inclusion_proof.go",
    ],
    importpath = "github.com/OffchainLabs/bold/state-commitments/history",
    visibility = ["//visibility:public"],
    deps = [
        "//chain-abstraction:protocol",
        "//math",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
    ],
)

go_test(
    name = "history_test",
    size = "medium",
    srcs = [
        "history_commitment_test.go",
        "inclusion_proof_test.go",
    ],
    embed = [":history"],
    deps = [
        "//state-commitments/legacy",
        "//state-commitments/prefix-proofs",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//require",
    ],
)
