load("@io_bazel_rules_go//go:def.bzl", "go_test")

test_suite(
    name = "endtoend",
    tags = ["manual"],
    tests = [
        ":endtoend_test",
        "//testing/endtoend/internal/backend:backend_test",
    ],
)

go_test(
    name = "endtoend_test",
    srcs = ["basic_local_test.go"],
    tags = [
        "exclusive-if-local",
        "manual",
    ],
    deps = [
        "//protocol",
        "//protocol/sol-implementation",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//state-manager",
        "//testing/endtoend/internal/backend",
        "//validator",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_offchainlabs_nitro//util/headerreader",
    ],
)
