load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "challengetree",
    srcs = ["edge.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/api/internal/todo/challengetree",
    visibility = ["//api:__subpackages__"],
    deps = [
        "//chain-abstraction:protocol",
        "//containers/option",
        "@com_github_ethereum_go_ethereum//common",
    ],
)
